# rustgzip

./: Cargo.toml  DEV_NOTES  README  README-hacking.md
src/: constants.rs  list.rs  main.rs  rstzip  treat.rs  unzip.rs  util.rs  zip.rs
src/formats/: gz.rs  list.rs  mod.rs  pkzip.rs  zip.rs
tests/: cli.rs  ref-gzip
