[package]
name = "rstzip"
version = "0.1.0"
authors = ["Will Fehrnstrom <wfehrnstrom@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.18"
libc = "0.2"
num = "0.2"
flate2 = { version = "^1.0", features = ["zlib"], default-features = false }
atty = "0.2"
utime = "0.2"
chrono = "0.4"
zip = "0.5.2"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
remove_dir_all = "0.5.2"
